# cpp_projects

./: .gitignore  ReadMe.md
Take_A_Number/: main.cpp
Take_A_Number/include/: Customer.hpp  QueueManagingSystem.hpp
building_a_nice_cmake_project_reference/: CMakeLists.txt  makefile
building_a_nice_cmake_project_reference/src/: CMakeLists.txt  main.cpp
building_a_nice_cmake_project_reference/src/component/: function.cpp  function.h  header.h
building_a_nice_project_reference/: makefile
cpp_cross_platform_thread_class/: ReadMe.md
philosophers_dinner/: Philosopher.cpp  main.cpp
philosophers_dinner/include/: Philosopher.hpp
rule_of_five/: makefile
shared_memory_tests/: Makefile  owner.cpp  reader.cpp
shared_memory_tests/include/: shm_data.hpp
take_a_number/: Customer.cpp  SequenceUML.md
take_a_number/include/: Clerk.hpp
udp_socket_sandbox/: makefile  run.sh
udp_socket_sandbox/src/: client.cpp  server.cpp
uml_examples_for_projects/: file_structure.pu
